--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,23 +1,18 @@
-body{
-	color: #ca3e47;
-	background-color: #414141;
-}
+
 
 .top {
-	background-color: #313131;
 	border-radius: 25px;
 	padding: 25px;
 }
 
 .title{
-	font-size: 50;
+	font-size: 50px;
 	font-family: Serif;
 	font-weight: 150;
 	text-align: center;
 }
 
 .status{
-	background-color: #525252;
 	height: 500;
 	font-size: 25;
 	font-weight: 50;
@@ -26,18 +21,49 @@ body{
 }
 
 .status-entry{
-	background-color: #ff4d00;
-	color: white;
+
 	border-radius: 25px;
 	padding: 25px;
 }
 
 .status-title{
-	font-size: 50;
+	font-size: 25px;
 	font-family: Serif;
 	font-weight: 150;
 	text-align: center;
-	background-color: #313131;
 	border-radius: 5px;
+	padding: 25px;
 	
+}
+
+.center{
+	text-align: center;
+}
+
+.left{
+	text-align: left;
+}
+
+.right{
+	text-align: right;
+}
+
+.color1{
+	background-color: #ff4d00;
+	color: #35eaea;
+}
+
+.color2{
+	background-color: #525252;
+	color: #ca3e47;
+}
+
+.color3{
+	background-color: #313131;
+	color: #ca3e47;
+}
+
+.color4{
+	color: #ca3e47;
+	background-color: #414141;
 }
