--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,4 +1,14 @@
+a:link{
+	color: #ca3e47;
+}
 
+a:visited{
+	color:  #ff4d00;
+}
+
+a:hover {
+  color: hotpink;
+}
 
 .top {
 	border-radius: 25px;
