--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -111,6 +111,11 @@ div.g-recaptcha {
 	color: #b030b0;
 }
 
+.color7{
+	background-color: #202040;	
+	color: #b030b0;
+}
+
 input.dark1{
 	background-color: #3e2d80;
 	color: #b030b0;
